minor fix for caret on mobile

--- a/style.css
+++ b/style.css
@@ -102,4 +102,5 @@ input {
 
 input:focus-visible {
     outline: none;
+    text-indent: -9999em;
 }
